<?xml version="1.0" encoding="utf-8"?>
<!-- 

strings.xml
 
 
Copyright (C) 2011 Paolo Dongilli & Markus Windegger

This file is part of SasaBus.

SasaBus is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SasaBus is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SasaBus.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
<string name="no_values">No values found.</string>
<string name="check_database">Checking Database</string>

<string name="select_bacino">Select the area:</string>
<string name="select_linea">Select bus number:</string>
<string name="select_destination">Select destination:</string>
<string name="select_palina">Select bus stop:</string>
<string name="show_orari">schedule</string>
<string name="select_mode">Select mode:</string>
<string name="select_from_to">Select from or to</string>

<string name="md5_error">Calculated MD5 of database file is different from downloaded MD5.</string>
<string name="db_download_error">Error while downloading the SASAbus database.</string>
<string name="db_ok">File %1$s is ready.</string>
<string name="menu_about">About</string>
<string name="updates">... updates ...</string>
<string name="license">SASAbus is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThe Google Maps Icons are relaesed under the cc contributed by Maps Icons Collection http://mapicons.nicolasmollet.com</string>
<string name="copyright">Software: Copyright (C) %1$s SASAbus Team\n\nData: CC-SA-NC by http://open.sasabz.it</string>
<string name="supp_email">For support and contact with the developers send a mail to: android@sasabz.it</string>
<string name="disclaimer">SASAbus is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.</string>
<string name="gpl">You should have received a copy of the GNU General Public License along with SASAbus.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</string>
<string name="sd_card_not_mounted">External storage (SD-Card) not mounted.</string>
<string name="no_network_connection">No network connection available.</string>
<string name="downloading_db">Downloading SASAbus Database Update ...</string>
<string name="downloading_md5">Downloading MD5 Checksum ...</string>
<string name="unzipping_db">Unzipping SASAbus Database ...</string>
<string name="no_db_update_available">Timetable update is not available. Please try again later.</string>
<string name="gps_disabled_title">GPS disabled</string>
<string name="gps_disabled">The GPS-data on your mobile phone is not available, please turn your GPS on or try again later.</string>
<string name="gps_wait">Waiting while getting GPS coordinates</string>
<string name="error_title">Error</string>
<string name="error_text">An error occurred during the download. Try again later or contact the maintainer of the application</string>
<string name="error_application">An error occurred while fetching objects from the database ... please try again or contact the maintainer of the application</string>
<string name="menu_credits">Credits</string>
<string name="credits_text">SASAbus was brought to you by the members of the SASAbus Team:\n\nPaolo Dongilli\n&lt;paolo.dongilli@gmail.com&gt;\n\nMarkus Windegger\n&lt;markus@mowiso.com&gt;\n\nThe icons where taken from www.glyphicons.com and they are released under the cc-3.0-sha-nc licence!</string>

<string name="mode_gps">GPS Mode</string>
<string name="mode_normal">Normal Mode</string>
<string name="mode_qr_code">QR Code Mode</string>

<string name="show_way">Show Route:</string>
<string name="weiter">Go!</string>
<string name="menu_settings">Settings</string>
<string name="menu_map">Map</string>
<string name="menu_test">this is a test</string>
<string name="menu_more">More</string>
<string name="menu_infos">News</string>
<string name="menu_old_mode">Offline</string>


<string name="gps_prefs">GPS Preferences</string>
<string name="general_prefs">General preferences</string>

<string name="rad_gps">Radius</string>
<string name="gps_descr">This is the search radius for the nearest bus stops when in GPS-Mode</string>
<string name="mode">Default mode</string>
<string name="mode_descr">Default mode when starting the Application</string>
<string name="line_infos">City</string>
<string name="line_infos_descr">This sets the city for displaying the news of lines</string>

<string name="theme">Theme</string>
<string name="theme_descr">Select your preferred theme</string>

<string name="sensor_off">Sensor disabled, please enable!</string>
<string name="pointing">Pointing to Bus Stop</string>
<string name="pointer_info">Attention! For a higher accuracy when pointing to a bus stop, you have to hold the mobile phone steady</string>

<string name="line">Line: </string>
<string name="from">From: </string>
<string name="to">To: </string>
<string name="from_txt">From</string>
<string name="to_txt">To</string>
<string name="line_txt">Line</string>

<string name="download_available">Schedule update available. Download?</string>

<string name="intermediate">Intermediate Stop</string>
<string name="bus_stop">Stop: </string>

<string name="no_map_update_available">OpenStreetMap data update is not available. Please try again later.</string>
<string name="downloading_map">Downloading OpenStreetMap data update ...</string>
<string name="map_download_error">Error while downloading the OpenStreetMap data.</string>
<string name="check_osm">Checking OpenStreetMap data</string>
<string name="unzipping_map">Unzipping OpenStreetMap data ...</string>
<string name="retry_download">Canno connect to the downloadserver.\nRetry Download?</string>

<string name="yes">Yes</string>
<string name="no">No</string>

<string name="error_scan_text">An error occurred during scanning a code: Its not a valid QR-Code for SASAbus</string>
<string name="scan_text_not_implemented">This feature is coming soon!</string>

<string name="scan">Scanning</string>

<string name="delete">Delete</string>
<string name="refresh">Refresh</string>
<string name="save">Save</string>

<string name="map">Map</string>
<string name="map_pick">From map</string>
<string name="map_show">Show on Map</string>
<string name="favorit">Add to favourites</string>
<string name="favorit_add">Successfully added to favourites</string>
<string name="favorit_pick">From favourites</string>


<string name="mode_favoriten">Favourites</string>
<string name="mode_online">Online Mode</string>
<string name="mode_home">Home</string>
<string name="select_stop">Select busstop</string>

<string name="online_connection_error">The entered pattern matches no busstop</string>
<string name="search_connection">Search connection</string>

<string name="date_and_time">Date and time:</string>
<string name="time_txt">dd/mm/yyyy</string>

<string name="reset">Reset</string>

<string name="waiting">Please wait...</string>
<string name="transfers">Trasferimenti</string>

<string name="set_date">Date</string>
<string name="set_time">Time</string>

<string name="error_station">One of the referred Station was not found</string>
<string name="error">Error</string>
<string name="error_connection">Failure during Connectionquery, please try again or modify request!</string>

<string name="connection">Connections</string>
<string name="connection_details">Connection details</string>

<string name="information">Information</string>
<string name="offline_info">You have no internet connectivity. Please enable internetconnection or switch to the offline mode. Switch to offline mode?</string>

<string name="start">Start</string>
<string name="zwischenstop">Intermediate stop</string>
<string name="ziel">Arrival</string>

<string name="am">AM</string>
<string name="pm">PM</string>

<string name="earlier">earlier</string>
<string name="later">later</string>

<string name="offline">Offline</string>
<string name="online">Online</string>
<string name="info">Info</string>

<string name="bus_stops_nearby">Bus stops nearby</string>
<string name="bus_stop_from_map">Bus stop from map</string>

<string name="departure">Departure:</string>
<string name="arrival">Arrival:</string>

<string name="departure_bus_stop">Departure bus stop</string>
<string name="arrival_bus_stop">Arrival bus stop</string>

<string name="more">More</string>
<string name="nearby_button">Bus stops nearby</string>
<string name="map_button">Select bus stop from map</string>
<string name="favorites_button">Favorite bus stops</string>

<string name="date">Date:</string>
<string name="time">Time:</string>
<string name="date_pattern">dd/mm/yyyy</string>
<string name="time_pattern">hh/mm</string>

<string name="preferences">Preferences</string>
<string name="preference_notifications_title">Notifications</string>
<string name="preference_notifications_summary">Receive notifications if short-term changes occur to your favored bus lines.</string>

<string name="activity_label_results">Connections found</string>

<string name="departures">Departures</string>
<string name="departure_times">Departure times</string>
<string name="course">Course</string>

<string name="lines">Lines:</string>

<string name="bus_lines">Bus lines</string>
<string name="bus_stops">Bus stops</string>
<string name="search_route">Search route</string>
<string name="parking_spots">Parking spots</string>
<string name="news">News</string>

<string name="drawer_open">Open navigation drawer</string>
<string name="drawer_close">Close navigation drawer</string>

</resources>